# machine-learning-crash-course

./: .gitignore  README.md  pyproject.toml
ml/cc/: numpy_ultraquick_tutorial.ipynb
ml/cc/exercises/: numpy_ultraquick_tutorial.ipynb  pandas_dataframe_ultraquick_tutorial.ipynb
