[tool.poetry]
name = "machine-learning-crash-course"
version = "0.1.0"
description = "Google Machine Learning Crash Course"
authors = ["Farzad FARID <farzy@farzy.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
