[project]
name = "machine-learning-crash-course"
version = "0.1.0"
description = "Google Machine Learning Crash Course"
readme = "README.md"
package-mode = false
authors = [
    {name = "Farzad FARID", email = "farzy@farzy.org"},
]
requires-python = "==3.12"
dependencies = [
    "jupyter",
    "numpy",
    "pandas",
    "tensorflow",
    "scikit-learn",
    "seaborn",
]

[tool.uv]
default-groups = []
